# verbose-couscous

./: README.md
projects/carwash/: .gitignore  Dockerfile  README.md  create_data_app.py  docker-compose.yml  main.py  pyproject.toml
projects/carwash/app/: create_fastapi_app.py
projects/carwash/app/alembic/: env.py
projects/carwash/app/alembic/versions/: 075e96c151fc_make_nullabe_attr_order.py  199a959ba94c_update_user_attr.py  284fa42356e9_add_cascade_order_service.py  2c28b60b2eb7_update_order_status_default.py  78e80cedeff3_add_new_models.py  d21aff1da188_add_cascade_relationships.py  fa19abfd3fc6_make_nullabe_start_end_date_in_order.py  fb985eb357af_change_datetime_columns_to_use_timezone.py
projects/carwash/app/api/: __init__.py
projects/carwash/app/api/v1/: __init__.py  auth.py  brand.py  car.py  customer_cars.py  order.py  profile.py  (+5 more)
projects/carwash/app/auth/: dependencies.py  utils.py
projects/carwash/app/celery/: celery_app.py
projects/carwash/app/core/: config.py
projects/carwash/app/db/: access_token.py  base.py  db_helper.py
projects/carwash/app/models/: __init__.py  brand.py  car.py  customer_cars.py  order.py  order_service.py  role.py  role_user.py  service.py  user.py
projects/carwash/app/redis/: dependencies.py  redis_cache.py
projects/carwash/app/repositories/: __init__.py  base.py  repositories.py
projects/carwash/app/schemas/: __init__.py  brand.py  car.py  customer_cars.py  order.py  order_service.py  profile.py  role.py  role_user.py  service.py  token.py  user.py
projects/carwash/app/utils/: exception.py  filters.py
(+51 files in other folders)
